# DB-Design-With-ChatGPT

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.txt  manage.py  pyproject.toml
AuthApp/: costum_decorator.py  forms.py  urls.py  views.py
application/: ai.py  models.py  openai_helper.py  urls.py  views.py
db_design_with_chatgpt/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  correct_db.html  home.html  index.html  project_details_add.html  project_details_edit.html
templates/AuthApp/: login.html  login_copy.html  register.html  register_copy.html
